--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "elasticsearch": "^15.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "express-redis-cache": "^1.1.3",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
     "hbs": "~4.0.1",
