--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "aws-sdk": "^2.362.0",
+    "aws-sdk": "^2.364.0",
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.2",
     "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
-    "debug": "~2.6.9",
+    "debug": "^2.6.9",
     "elasticsearch": "^15.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
@@ -22,13 +23,12 @@
     "hbs": "~4.0.1",
     "http-aws-es": "^6.0.0",
     "http-errors": "~1.6.2",
-    "mongoose": "^5.3.13",
+    "mongoose": "^5.3.14",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.6",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "serve-favicon": "^2.5.0",
-    "stripe": "^6.17.0"
+    "redis": "^2.8.0",
+    "serve-favicon": "^2.5.0"
   },
   "description": "Repository,",
   "main": "app.js",
